<package>
  <name>hrl_dressing</name>
  <version>0.0.1</version>
  <description>hrl_dressing</description>
  <maintainer email="akapusta@gatech.edu">Ari Kapusta</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_dressing</url>
  <!-- <url type="bugtracker"></url> -->

  <author>Ari Kapusta</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>hrl_msgs</build_depend>
  <build_depend>netft_rdt_driver</build_depend>
  <build_depend>zenither</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hrl_msgs</run_depend>
  <run_depend>netft_rdt_driver</run_depend>
  <run_depend>zenither</run_depend>

  <!-- Dependencies needed only for running tests. -->
  <!-- <test_depend>rospy</test_depend> -->
  <!-- <test_depend>std_msgs</test_depend> -->
  <!-- <test_depend>geometry_msgs</test_depend> -->
  <!-- <test_depend>hrl_msgs</test_depend> -->
  <!-- <test_depend>force_torque</test_depend> -->
  <!-- <test_depend>zenither</test_depend> -->

</package>
