<package>
  <name>hrl_execution_monitor</name>
  <version>0.0.0</version>
  <description>hrl_execution_monitor</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_execution_monitor</url>

  <author>Daehyung Park</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>message_generation</build_depend>
  <build_depend>std_msgs</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>message_runtime</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hrl_lib</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>hrl_msgs</run_depend>
  <run_depend>hrl_srvs</run_depend>
  <run_depend>sound_play</run_depend>
  <run_depend>hrl_anomaly_detection</run_depend>

</package>










