<package>
  <name>hrl_manipulation_task</name>
  <version>0.0.0</version>
  <description>hrl_manipulation_task</description>
  <maintainer email="deric.park@gatech.edu">Daehyung Park Advisor: Prof. Charlie Kemp.
      Healthcare Robotics Lab, Georgia Tech</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/hrl_manipulation_task</url>

  <author>Daehyung Park</author>

  <!-- Dependencies which this package needs to build itself. -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>roscpp</build_depend>
  <build_depend>pcl_conversions</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>kdl_parser</build_depend>
  <build_depend>orocos_kdl</build_depend>
  <build_depend>hrl_anomaly_detection</build_depend>

  <build_depend>cv_bridge</build_depend>
  <build_depend>opencv2</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>image_geometry</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>rospy</run_depend>
  <run_depend>hrl_lib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>

  <!--run_depend>ar_track_alvar_msgs</run_depend-->
  <run_depend>ar_track_alvar_msgs</run_depend>
  <run_depend>hark_msgs</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>pr2_msgs</run_depend>
  <run_depend>pr2_controllers_msgs</run_depend>
  <run_depend>hrl_haptic_manipulation_in_clutter_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>hrl_srvs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>sandbox_dpark_darpa_m3</run_depend>
  <run_depend>hrl_anomaly_detection</run_depend>
  <run_depend>visualization_msgs</run_depend>

  <run_depend>pcl_conversions</run_depend>
  <run_depend>roccpp</run_depend>
  <run_depend>kdl_parser</run_depend>
  <run_depend>orocos_kdl</run_depend>

  <run_depend>cv_bridge</run_depend>
  <run_depend>opencv2</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>image_geometry</run_depend>

</package>







